# AITK-559-tagging-of-legal-acts-prototype

./: README.md  acts_notes.csv  pdf_parser.py  pipeline.py  pipeline_legal.py  pyproject.toml  s3_get_acts.py  service.py
Arhive/: pipeline.py  pipeline_legal.py  promts_handler.py  re_handle.py
data/: prompts.json  queries41week_with_len.csv  типология_требований.txt
